tests/ui/match/borrowck-uninhabited.stderr
error[E0503]: cannot use `*x` because it was mutably borrowed
  --> $DIR/borrowck-uninhabited.rs:8:37
   |
LL |         &mut Ok(ref mut y) => match x {
   |                 ---------           ^ use of borrowed `x.0`
   |                 |
   |                 `x.0` is borrowed here
...
LL |                 let _y = y;
   |                          - borrow later used here

error[E0503]: cannot use `*x` because it was mutably borrowed
  --> $DIR/borrowck-uninhabited.rs:23:37
   |
LL |         &mut Ok(ref mut y) => match x {
   |                 ---------           ^ use of borrowed `x.0`
   |                 |
   |                 `x.0` is borrowed here
...
LL |                 let _y = y;
   |                          - borrow later used here

error[E0503]: cannot use `*x` because it was mutably borrowed
  --> $DIR/borrowck-uninhabited.rs:43:19
   |
LL |         &mut Single::V(ref mut y, _) => {
   |                        --------- `x.0` is borrowed here
LL |             match x {
   |                   ^ use of borrowed `x.0`
...
LL |                     let _y = y;
   |                              - borrow later used here

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0503`.
